# sparckles-cli

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
