[tool.poetry]
name = "sparckles"
version = "0.1.0"
description = "Easiest way to deploy python applications"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
license = "BSD-2.0"
readme = "README.md"
packages = [
    { include = "sparckles", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
